2002-02-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* little improvements to random_launch.c

	
2002-02-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* added omap object type to scripting (sort of struct)
	  - added file script_call_omap.cpp, mod. Makefile.am
	* wrote explore_the_unviverse.c script and missions
	* wrote random_launch.c


2002-02-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified main.cpp, so that the savegame is only loaded if
	  there's a savegame variable
	

2002-02-13 Daniel Horn <hellcatv@hotmail.com>
	* Made genearted light maps save in home directory
	* Made universes searched for in home directory
	* Wired in a star system generator that will generate systems that are not there
	* Added feature taht will call this generator in the event a system is not found
	* Added a lame autopilot feature
	* Added another version of config_xml.cpp  -- galaxy_xml  we should really combine duplicate code...but I don't know how to do it...config_xml depends a lot on joystick....
	* Explore!!!!!!!!!!!!!!!!! You can craete a galaxy map using galaxy_xml to specify connectivity and who owns system...otherwise ti will pick unknown faction to own everything (hate everyone)
	
2002-02-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* first tutorial mission
	* gave the hornet cockpit a message display
	* moved the defines for HOMESUBDIR,CONFIGFILE and DELIM
	  from vs_path.cpp to vs_path.h
	* changed saving of variables to ~/.vegastrike/default-player.variables

	
2002-02-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* updated the homepage/doc directory:
	  - changed the menu from java to simple text-links
	  - added Sabarok to the credits page (and removed James T. Richardson)
	  - updated playing/installing/download page
	* added PickTargetKey to FireKeyboard
	* started to write tutorial mission (not working yet)
	

2002-02-10 Daniel Horn <hellcatv@hotmail.com>