@@ -42,6 +42,8 @@ class VDU: public Sprite {
   void DrawWeapon(Unit *parent);
   ///Draws the sprite representing the current starship. Returns proper location and size for future use (with weaps and damage display)
   void DrawTargetSpr(Sprite * s,float percent, float &x, float &y, float &w, float &h);
+  ///draws the target camera
+void  DrawStarSystemAgain (float x,float y,float w,float h, VIEWSTYLE viewStyle,Unit *parent,Unit *target);
 public:
   ///Alert! To add a mode must change const array on the bottom
   enum VDU_MODE {TARGET=0x1,NAV=0x2,WEAPON=0x4, DAMAGE=0x8, SHIELD=0x10, VIEW=0x20, MSG=0x40};
